--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -41,17 +41,28 @@
 
 .app__footer-links_icons {
   margin-top: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .app__footer-links_icons svg {
   color: var(--color-white);
   margin: 0.5rem;
-  font-size: 24px;
+  font-size: 32px;
   cursor: pointer;
+  transition: all 0.3s ease;
+  padding: 0.75rem;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
 }
 
 .app__footer-links_icons svg:hover {
   color: var(--color-golden);
+  transform: translateY(-5px) scale(1.1);
+  background: rgba(220, 202, 135, 0.1);
 }
 
 .app__footer-headtext {
@@ -74,6 +85,13 @@
     font-size: 51px;
     line-height: 61.6px;
   }
+
+  .app__footer-links_icons svg {
+    font-size: 42px;
+    width: 65px;
+    height: 65px;
+    padding: 1rem;
+  }
 }
 
 @media screen and (max-width: 1150px) {
@@ -95,10 +113,24 @@
   .app__footer {
     padding: 0 0 2rem 0;
   }
+
+  .app__footer-links_icons svg {
+    font-size: 28px;
+    width: 45px;
+    height: 45px;
+    padding: 0.6rem;
+  }
 }
 
 @media screen and (max-width: 350px) {
   .app__footer-links_logo img:first-child {
     width: 80%;
+  }
+
+  .app__footer-links_icons svg {
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    padding: 0.5rem;
   }
 }
